<resources>
    <string name="app_name">My Travel</string>
    <string name="image_logo">Image Logo</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="where_do_you_want_to_go">Where do you want to go?</string>
    <string name="find_your_sweetest">Find your sweetest</string>
    <string name="destinations">Destinations</string>
    <string name="categories">Categories</string>
    <string name="recommend">Recommend</string>
    <string name="text_recommended">Destinasi liburan yang sangat terkenal dan sering dikunjungi oleh banyak orang untuk  refreshing sejenak.</string>
    <string name="recommended_image">Recommended Image</string>
    <string name="nearby">Nearby</string>
    <string name="text_nearby">Destinasi liburan yang dekat dengan lokasi Anda yang tak kalah populer dan pasti membuat Anda betah!</string>
    <string name="hidden_gem">Hidden Gem</string>
    <string name="text_hidden_gem">Destinasi liburan yang tersembunyi namun tetap menakjubkan, memberikan pengalaman liburan seperti di luar negeri</string>
    <string name="search_bar">Search Bar</string>
    <string name="button_option">Button Option</string>
    <string name="title_activity_homes">HomesActivity</string>
    <string name="title_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_gem">Hidden Gem</string>
    <string name="title_nearby">Nearby</string>
    <string name="title_recommend">Recommend</string>
    <string name="destination_image">Destination Image</string>
    <string name="place_name">Nama Tempat</string>
    <string name="star_4">Star 4*</string>
    <string name="gem">Gem</string>

    <string name="temperature">%s °C</string>
    <string name="km">%s km</string>
    <string name="token_bearer">Bearer %s</string>

    <string name="address">Alamat</string>
    <string name="detail_recommend">Detail Recommend</string>
    <string name="setting">Setting</string>
    <string name="email">Email</string>

    <string name="login_failed">Login Failed</string>
    <string name="login_failed_text">Login gagal</string>
    <string name="login_success">Login Success</string>
    <string name="login_success_text">Selamat datang kembali</string>

    <string name="register_success">Register Success</string>
    <string name="register_success_text">Selamat datang di MyTravel! Mari jelajahi Indonesia.</string>
    <string name="register_failed">Register Failed</string>
    <string name="register_failed_text">Gagal mendaftarkan akun! Periksa koneksi anda lalu coba lagi.</string>

    <string name="update_success">Ubah Sukses</string>
    <string name="update_success_text">Data anda berhasil diubah.</string>
    <string name="update_failed">Ubah Gagal</string>
    <string name="update_failed_text">Gagal mengubah data! Periksa koneksi anda lalu coba lagi.</string>

    <string name="bahari">Bahari</string>
    <string name="budaya">Budaya</string>
    <string name="cagar_alam">Cagar Alam</string>
    <string name="taman_hiburan">Taman Hiburan</string>
    <string name="tempat_ibadah">Tempat Ibadah</string>
    <string name="pusat_perbelanjaan">Pusat Perbelanjaan</string>

    <string name="google_signin_failed">Google sign in failed</string>
    <string name="firebase_auth_with_google">firebaseAuthWithGoogle:</string>
    <string name="signin_with_credential_success">signInWithCredential:success</string>
    <string name="signin_with_credential_failed">signInWithCredential:failure</string>

    <string name="next">Next</string>
    <string name="close">Close</string>
    <string name="username">Nama</string>
    <string name="age">Usia</string>
    <string name="location">Lokasi</string>
    <string name="preferensi">Preferensi</string>
    <string name="keluar">Keluar</string>
    <string name="Profile">Profile</string>
    <string name="edit">Ubah</string>
    <string name="review_success">Review anda telah unggah, terima kasih!</string>
    <string name="your_review">Your Review</string>

    <string name="update_failed_category_empty">Silahkan pilih kategori terlebih dahulu!</string>
    <string name="field_mask">routes.duration,routes.distanceMeters</string>
    <string name="location_not_found">Lokasi tidak ditemukan. Silahkan coba lagi</string>
    <string name="image_1_mark">Image 1 Mark</string>
    <string name="image_2_mark">Image 2 Mark</string>
    <string name="image_3_mark">Image 3 Mark</string>
    <string name="image_4_mark">Image 4 Mark</string>
    <string name="image_5_mark">Image 5 Mark</string>
    <string name="image_6_mark">Image 6 Mark</string>
    <string name="_4_8">4.8</string>
    <string name="_26_c">26°C</string>
    <string name="_30000">30000</string>
    <string name="details">Details</string>
    <string name="write_a_review">Write a review</string>
    <string name="button_1_star">Button 1 Star</string>
    <string name="button_2_star">Button 2 Star</string>
    <string name="button_3_star">Button 3 Star</string>
    <string name="button_4_star">Button 4 Star</string>
    <string name="button_5_star">Button 5 Star</string>
    <string name="review">Review</string>
    <string name="post">Post</string>
    <string name="update_review">Update Review</string>
    <string name="post_update_review">Post Update Review</string>
    <string name="usia">Usia</string>
    <string name="lokasi">Lokasi</string>
    <string name="kategori">Kategori</string>
    <string name="pusat_nperbelanjaan">Pusat\nPerbelanjaan</string>
    <string name="ubah_data_saya">Ubah data saya</string>
    <string name="first_setup_image">First Setup Image</string>
    <string name="get_started">Get Started!</string>
    <string name="complete_your_data_and_start_travel">Complete your data and start travel</string>
    <string name="insert_your_age">Insert your age</string>
    <string name="age_setup">Age</string>
    <string name="location_setup">Location</string>
</resources>