<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recommend.DetailRecommendActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/detail_recommend"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/backgrounds/scenic" />
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_detail"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout">

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_recommend"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_detail_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/grey"
                android:textSize="14sp"
                app:drawableLeftCompat="@drawable/baseline_location_on_24_grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_address"
                tools:layout_editor_absoluteX="10dp">

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/_4_8"
                    android:textAlignment="center"
                    android:textColor="@color/orange"
                    app:drawableLeftCompat="@drawable/baseline_star_18_orange" />

                <TextView
                    android:id="@+id/tv_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="75dp"
                    android:paddingTop="5dp"
                    android:text="@string/_26_c"
                    android:textAlignment="center"
                    android:textColor="@color/grey"
                    app:drawableLeftCompat="@drawable/img_sunny" />

                <TextView
                    android:id="@+id/tv_htm"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="75dp"
                    android:paddingTop="5dp"
                    android:text="@string/_30000"
                    android:textAlignment="center"
                    android:textColor="@color/grey"
                    app:drawableLeftCompat="@drawable/img_htm" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:textSize="15sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/tvReviewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/write_a_review"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/btn_one_star"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:backgroundTint="@color/white"
                        android:contentDescription="@string/button_1_star"
                        android:src="@drawable/baseline_star_border_30" />

                    <ImageButton
                        android:id="@+id/btn_two_star"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:backgroundTint="@color/white"
                        android:contentDescription="@string/button_2_star"
                        android:src="@drawable/baseline_star_border_30" />

                    <ImageButton
                        android:id="@+id/btn_three_star"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:backgroundTint="@color/white"
                        android:contentDescription="@string/button_3_star"
                        android:src="@drawable/baseline_star_border_30" />

                    <ImageButton
                        android:id="@+id/btn_four_star"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:backgroundTint="@color/white"
                        android:contentDescription="@string/button_4_star"
                        android:src="@drawable/baseline_star_border_30" />

                    <ImageButton
                        android:id="@+id/btn_five_star"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:backgroundTint="@color/white"
                        android:contentDescription="@string/button_5_star"
                        android:src="@drawable/baseline_star_border_30" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reviewEditTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reviewEditText"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:ems="10"
                        android:hint="@string/review"
                        android:inputType="textEmailAddress"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_submit_review"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/blue_primary"
                    android:text="@string/post"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/reviewEditTextLayout" />

                <Button
                    android:id="@+id/btn_update_review"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:visibility="gone"
                    android:backgroundTint="@color/grey"
                    android:text="@string/update_review"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/reviewEditTextLayout" />

                <Button
                    android:id="@+id/btn_post_update_review"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:visibility="gone"
                    android:backgroundTint="@color/blue_primary"
                    android:text="@string/post_update_review"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/reviewEditTextLayout" />

                <ProgressBar
                    android:id="@+id/topProgressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_reviews"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>