<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginVertical="10dp"
    android:layout_marginEnd="8dp"
    card_view:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        >

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:contentDescription="@string/destination_image"
            android:scaleType="centerCrop"
            card_view:circularflow_defaultRadius="10dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0"
            tools:src="@tools:sample/backgrounds/scenic" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingHorizontal="8dp"
            card_view:layout_constraintTop_toBottomOf="@+id/iv_item_photo">

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/place_name"
                android:textSize="22sp"
                android:textStyle="bold"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded"
                android:backgroundTint="@color/blue_primary"
                android:paddingVertical="2dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/star_4"
                android:drawableLeft="@drawable/baseline_star_24_white"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="Jakarta"
                android:textSize="13sp"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>